update:update swagger command otp login
